<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fractal Lands 1 0.20 d 04</string>
    <string name="mni_toggle_animation">Toggle Animation</string>
    <string name="mni_inc_detail">Increase Detail Level</string>
    <string name="mni_dec_detail">Decrease Detail Level</string>
    <string name="btnNew">New&#8230;</string>
    <string name="btnAbout">About&#8230;</string>
    <string name="btnAboutClose">Close</string>
    <string name="btnClose">Close App</string>
    <string name="btnScreenshot">Screenshot</string>
    <string name="txtAbout">Graphics demo written by DK</string>
    <string name="lblCurrentDetail">Current Detail Level</string>
    <string name="lblCurrentDetailNr">Current Detail Level %1$s of max. %2$s</string>
    <string name="ttLandscape">Your Landscape - isn\'t it beautiful?</string>
    <string name="btnDrawPoints">Small Points</string>
    <string name="btnDrawBigPoints">Big Points</string>
    <string name="btnDrawLinesX">Lines X</string>
    <string name="btnDrawLinesY">Lines Y</string>
    <string name="btnDrawSquares">3D Squares</string>
    <string name="btnDrawTriangles">3D Triangles</string>
    <string name="spnPrompt">Draw like</string>
    <string name="txt_max_detail_toast">Maximum detail level %1$s reached!</string>
    <string name="txt_min_detail_toast">Minimum detail level 0 reached!</string>
    <string name="chk_use_animation">Animation</string>
    <string name="btnRiver">Add Fountains</string>
    <string name="mni_5rivers">Add 5 Fountains</string>
    <string name="btnOcean">Add Tsunami</string>

</resources>
