<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity01"
    android:id="@+id/theLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblCurrentDetail"
        android:id="@+id/lblCurrentDetail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.diudkr.fractalland01.LandscapeView"
        android:id="@+id/landscapeView"
        android:layout_below="@+id/lblCurrentDetail"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:layout_above="@+id/btnNew"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.diudkr.fractalland01.LandscapeView"
        android:id="@+id/landscapeViewSource"
        android:layout_alignTop="@+id/landscapeView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignLeft="@+id/landscapeView"
        android:layout_alignBottom="@+id/landscapeView"
        android:layout_alignRight="@+id/landscapeView"
        android:layout_alignEnd="@id/landscapeView"
        android:layout_alignStart="@id/landscapeView"
        android:background="@android:color/transparent" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.diudkr.fractalland01.LandscapeView"
        android:id="@+id/landscapeViewTarget"
        android:layout_alignTop="@+id/landscapeView"
        android:layout_alignBottom="@+id/landscapeView"
        android:layout_alignLeft="@+id/landscapeView"
        android:layout_alignRight="@+id/landscapeView"
        android:layout_alignStart="@id/landscapeView"
        android:layout_alignEnd="@id/landscapeView"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDrawmethod"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startNew"
        android:text="@string/btnNew" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDrawPoints"
        android:id="@+id/btnDrawmethod"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:onClick="changeDrawmethod" />

    <ZoomControls
        android:id="@+id/zoomDetailControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/landscapeView"
        android:clickable="false"
        android:orientation="horizontal"
        android:showDividers="beginning|middle|end" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_use_animation"
        android:id="@+id/chkUseAnimation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/zoomDetailControls"
        android:checked="false" />

    <Button
        android:id="@+id/btn_river"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNew"
        android:layout_alignBottom="@+id/btnNew"
        android:layout_toEndOf="@+id/btnNew"
        android:layout_toRightOf="@+id/btnNew"
        android:onClick="addRiver"
        android:text="@string/btnRiver" />

    <Button
        android:id="@+id/btn_ocean"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/btnDrawmethod"
        android:layout_toRightOf="@+id/btnDrawmethod"
        android:onClick="addOcean"
        android:text="@string/btnOcean" />

</RelativeLayout>
